# Cpp-Course-Assignments

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  configure
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yml  codeql.yml
HelloWorldProject/: Source.cpp
classwork/05.10.2022/LoopsPractice/: Source.cpp
classwork/12.10.2022/EuclideanAlgorithm/: EuclideanAlgorithm.sln  Source.cpp
classwork/12.10.2022/FibonacciNumbers/: FibonacciNumbers.sln
classwork/12.10.2022/ReverseNumber/: ReverseNumber.sln
classwork/12.10.2022/TemperatureConversion/: TemperatureConversion.vcxproj
classworks/02.11.2022/MergeArrays/: MergeArrays.sln  MergeArrays.vcxproj
classworks/05.10.2022/LoopsPractice/: LoopsPractice.sln  LoopsPractice.vcxproj
classworks/12.10.2022/EuclideanAlgorithm/: EuclideanAlgorithm.vcxproj  Source.cpp
classworks/12.10.2022/FibonacciNumbers/: FibonacciNumbers.vcxproj  Source.cpp
classworks/12.10.2022/Inequality/: Inequality.sln  Inequality.vcxproj  Source.cpp
classworks/12.10.2022/ReverseNumber/: ReverseNumber.vcxproj  Source.cpp
classworks/12.10.2022/TemperatureConversion/: Source.cpp  TemperatureConversion.sln
classworks/16.02.2023/ClassComposition/: ClassComposition.sln  ClassComposition.vcxproj  ClassComposition.vcxproj.filters
classworks/19.10.2022/CheckIfSorted/: CheckIfSorted.sln  CheckIfSorted.vcxproj
classworks/19.10.2022/NaturalDivisor/: NaturalDivisor.sln  NaturalDivisor.vcxproj  Source.cpp
classworks/19.10.2022/SmallestPositiveInteger/: SmallestPositiveInteger.sln  SmallestPositiveInteger.vcxproj  Source.cpp
classworks/19.10.2022/Task20A/: Task20A.sln  Task20A.vcxproj
classworks/22.10.2022/Matrix/: Matrix.sln  Matrix.vcxproj  Source.cpp
classworks/23.11.2022/Classes/: Classes.sln  Classes.vcxproj  Source.cpp
classworks/23.11.2022/Student/: Student.sln  Student.vcxproj
classworks/26.11.2022/Classes/: Classes.sln  Classes.vcxproj  Source.cpp  input.txt  output.txt
homeworks/Homework_001/: Homework_001.sln  Homework_001.vcxproj
homeworks/Homework_002/: Homework_002.sln  Homework_002.vcxproj
homeworks/Homework_003/: Homework_003.sln  Homework_003.vcxproj
homeworks/Homework_004/: Homework_004.sln  Homework_004.vcxproj
homeworks/Homework_005/: Homework_005.sln  Homework_005.vcxproj
homeworks/Homework_006/: Homework_006.sln  Homework_006.vcxproj
homeworks/Homework_007/: Homework_007.sln  Homework_007.vcxproj  Source.cpp
homeworks/Homework_008/: Homework_008.sln  Homework_008.vcxproj
homeworks/Homework_009/: Homework_009.sln  Homework_009.vcxproj
homeworks/Homework_010/: Homework_010.sln  Homework_010.vcxproj  Source.cpp
homeworks/Homework_011/: Homework_011.sln  Homework_011.vcxproj
homeworks/Homework_012/: Homework_012.sln  Homework_012.vcxproj
homeworks/Homework_013/: Homework_013.sln  Homework_013.vcxproj
homeworks/Homework_014/: Homework_014.sln  Homework_014.vcxproj  Source.cpp
homeworks/Homework_015/: Homework_015.sln  Homework_015.vcxproj
homeworks/Homework_016/: Homework_016.sln  Homework_016.vcxproj
projects/HelloWorld/: HelloWorld.sln  HelloWorld.vcxproj  Source.cpp
projects/HelloWorldProject/: HelloWorldProject.sln  HelloWorldProject.vcxproj
shared/doctest/: doctest.h
src/algorithms/avl_tree/: avl_tree.cpp
src/algorithms/bitset/: bitset.cpp
test/: test  test.cpp
(+86 files in other folders)
